[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.query_insight_agent.metadata]
type = "agent"

[project]
name = "query_insight_agent"
version = "0.1.0"
authors = [
  { name="Abhishek Sharma", email="abhishek.sharma@solace.com" },
]
description = "Agent which executes query and provides insights about the retrieved results"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "solace_agent_mesh~=1.0.2",
    # Add plugin-specific dependencies here
]

[tool.hatch.build.targets.wheel]
packages = ["src/query_insight_agent"]
src-path = "src"

[tool.hatch.build.targets.wheel.force-include]
"src/query_insight_agent" = "query_insight_agent/"
"config.yaml" = "query_insight_agent/config.yaml"
"README.md" = "query_insight_agent/README.md"
"pyproject.toml" = "query_insight_agent/pyproject.toml"
